--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.26.7",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
 		"@geist-ui/core": "^2.3.8",
+		"@mui/material": "^6.4.2",
+		"@mui/x-charts": "^7.25.0",
 		"axios": "^1.7.9",
 		"next": "15.1.6",
 		"react": "^19.0.0",
@@ -22,5 +26,9 @@
 		"@eslint/eslintrc": "^3",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.6"
+	},
+	"peerDependencies": {
+		"react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+		"react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
 	}
 }
