--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
 		"@emotion/styled": "^11.14.0",
 		"@geist-ui/core": "^2.3.8",
 		"@mui/material": "^6.4.2",
-		"@mui/x-charts": "^7.25.0",
 		"axios": "^1.7.9",
 		"next": "15.1.6",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+		"react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
 		"react-icons": "^5.4.0",
 		"uuid": "^11.0.5"
 	},
