Add: shadcn and tailwindcss to project

--- a/package.json
+++ b/package.json
@@ -15,16 +15,24 @@
 		"@geist-ui/core": "^2.3.8",
 		"@mui/material": "^6.4.2",
 		"axios": "^1.7.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.475.0",
 		"next": "15.1.6",
 		"react": "^17.0.0 || ^18.0.0 || ^19.0.0",
 		"react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
 		"react-icons": "^5.4.0",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^11.0.5"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9",
-		"eslint-config-next": "15.1.6"
+		"eslint-config-next": "15.1.6",
+		"postcss": "^8.5.2",
+		"tailwindcss": "^4.0.6"
 	},
 	"peerDependencies": {
 		"react": "^17.0.0 || ^18.0.0 || ^19.0.0",
