--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
 		"@geist-ui/core": "^2.3.8",
-		"@mui/material": "^6.4.2",
+		"@radix-ui/react-tabs": "^1.1.3",
+		"@tailwindcss/postcss": "^4.0.6",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.475.0",
 		"next": "15.1.6",
+		"next-themes": "^0.4.4",
 		"react": "^17.0.0 || ^18.0.0 || ^19.0.0",
 		"react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
 		"react-icons": "^5.4.0",
+		"react-is": "^19.0.0",
+		"recharts": "^2.15.1",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^11.0.5"
