--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"react": "^17.0.0 || ^18.0.0 || ^19.0.0",
 		"react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
 		"react-icons": "^5.4.0",
-		"react-is": "^19.0.0",
+		"react-is": "^19.0.0-rc-69d4b800-20241021",
 		"recharts": "^2.15.1",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
