--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/styled": "^11.14.0",
 		"@geist-ui/core": "^2.3.8",
 		"@radix-ui/react-tabs": "^1.1.3",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tailwindcss/postcss": "^4.0.6",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
