--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
 		"@geist-ui/core": "^2.3.8",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@radix-ui/react-tooltip": "^1.1.8",
-		"@tailwindcss/postcss": "^4.0.6",
+		"@tailwindcss/postcss": "^4.0.8",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -36,8 +38,8 @@
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.6",
-		"postcss": "^8.5.2",
-		"tailwindcss": "^4.0.6"
+		"postcss": "^8.5.3",
+		"tailwindcss": "^4.0.8"
 	},
 	"peerDependencies": {
 		"react": "^17.0.0 || ^18.0.0 || ^19.0.0",
